--- a/src/Components/RegisterPage/RegisterPage.css
+++ b/src/Components/RegisterPage/RegisterPage.css
@@ -64,18 +64,23 @@ h2{
     box-shadow: 36px 36px 100px 0px #00000040;
     border-radius: 10px;
 }
-.register-btn{
-    margin-top: 20px;
-    color: black;
-    align-items: center;
-    text-align: center;
-}
 .nav-buttons{
     margin: auto;
 }
 .register-btn{
     position: relative;
     left: 150px;
+    bottom: 20px;
+    font-family: "Katibeh", serif;
+    font-size: 35px;
+    vertical-align: middle;
+    width: 180px;
+    height: 79px;
+    border-radius: 10px;
+    border: none;
+    background-color: green;
+    color: white;
+    cursor: pointer;
     
 }
 h4{
