--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -1,3 +1,4 @@
+
     .navbar{
           /* background-color: blue; */
         display: flex;
@@ -24,7 +25,7 @@
             height: 79px;
             border-radius: 10px;
             border: none;
-            background-color: green;
+            background-color: #089930;
             color: white;
             cursor: pointer;
             /* margin-right: 40px; */
@@ -45,12 +46,12 @@
           height: 79px;
           border-radius: 10px;
         border: none;
-        background-color: green;
+        background-color: #089930;
           color: white;
           cursor: pointer;
         }
         .heading-text{
-          background-color: green;
+          background-color: #089930;
           height: 70px;
           color: white;
           padding: 5px;
@@ -67,6 +68,7 @@
           align-items: center;
         }
         .homeicon{
+          color: #27374D;
           display: flex;
           cursor: pointer;
         }
@@ -75,7 +77,7 @@
           justify-content: space-evenly;
         }
         .block1{
-          background-color: green;
+          background-color: #089930;
           width: 300px;
           height: 400px;
           position: relative;
@@ -96,7 +98,7 @@
           border-radius: 10px;
         }
         .footer{
-          background-color: green;
+          background-color: #089930;
           height: 20px;
           color: white;
           padding: 5px;
@@ -105,7 +107,7 @@
         .linethrough{
           border: none;
           height: 5px;
-          background-color: #83D0FC;
+          background-color: white;
         }
         .block1-text{
           margin-top: 10px;
