--- a/src/Components/UserPage/UserPage.css
+++ b/src/Components/UserPage/UserPage.css
@@ -145,6 +145,31 @@
           font-size: 25px;
           padding: 5px;
           border-radius: 5px;
-          cursor: pointer;
+        }
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 260px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+        .dropdown-content a {
+          font-family: 'katibeh';
+          font-size: 30px;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+        
+        .dropdown-content a:hover {background-color: #f1f1f1}
+        
+        .dropdown:hover .dropdown-content {
+          display: block;
+        }
+        
+        .dropdown:hover .dropbtn {
+          background-color: #3e8e41;
         }
 
