--- a/src/Components/RegisterPage/RegisterPage.css
+++ b/src/Components/RegisterPage/RegisterPage.css
@@ -55,6 +55,37 @@ h2{
     box-shadow: 36px 36px 100px 0px #00000040;
     border-radius: 10px;
 }
+
+    /*
+.email:hover::after {
+    content: attr(email);
+  position: absolute;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 5px;
+  z-index: 1;
+}*/
+
+.tooltip {
+    display: none;
+    position: absolute;
+    background-color: black;
+    border: 1px solid #ccc;
+    color: white;
+    padding: 10px;
+    border-radius: 15px;
+    z-index: 1;
+    left: 300px;
+    width: 400px;
+    /* margin: 0px; */
+    text-align: center;
+  }
+  
+  .input-field input:focus +.tooltip {
+    display: block;
+  }
+
 .password{
     font-family: "Katibeh", serif;
     font-size: 40px;
